--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
-    "start": "babel-node buildScripts/srcServer.js"
+    "start": "babel-node buildScripts/srcServer.js",
+    "lint": "esw webpack.config.* src buildScripts --color"
   },
   "author": "Cory House",
   "license": "MIT",
