--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "start": "babel-node buildScripts/srcServer.js",
-    "lint": "esw webpack.config.* src buildScripts --color"
+    "lint": "esw webpack.config.* src buildScripts --color",
+    "lint:watch": "npm run lint -- --watch"
   },
   "author": "Cory House",
   "license": "MIT",
